fixed image alignment, commented both css and HTML file, removed training borders

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,14 +1,17 @@
+/* Style attributes for the entire page */
 * {
     background-color: rgba(143, 82, 2, 0.164);
     color: white;
 
 }
 
+/* Custom Variables for CSS */
 :root {
     --br30: 30px;
     --mgn1: 1%;
 }
 
+/* Attributes to style the header */
 header {
     border: 13px double white;
     border-radius: var(--br30);
@@ -16,20 +19,22 @@ header {
 
 }
 
+/* Attributes that style all images on the webpage */
 img {
     opacity: .5;
 }
 
+/* Styling the hover effect when images are hovered over */
 img:hover {
     opacity: 1;
 }
 
+/* Styling the Navigation Container, ul, li, h1, and a elements */
 .navcontainer {
     display: flex-column;
     justify-content: space-between;
     margin: .5%;
     padding: .5%;
-
 }
 
 .navcontainer ul {
@@ -63,6 +68,7 @@ img:hover {
     border-radius: var(--br30);
 }
 
+/* Styling the section that has the bird background image and profile picture */
 .bigcontainer {
     width: 98%;
     min-height: 95vh;
@@ -75,7 +81,7 @@ img:hover {
     font-size: 2.5em;
     background-color: rgba(0, 0, 0, 0);
     margin-top: 1%;
-    color: rgba(143, 82, 2, 0.573);
+    color: rgba(143, 82, 2, 0.678);
     margin-left: 7.5%;
 }
 
@@ -87,21 +93,25 @@ img:hover {
     opacity: 1;
 }
 
+/* Styles the main project Image */
 #bigimagepic {
-    margin-left: 1%;
-    margin-right: 1%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     max-height: 400px;
     min-width: 85.5vw;
 }
 
+/* Styles the 4 smaller project images */
 #smallpic {
-    margin-right: 1%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     max-height: 140px;
     min-width: 20vw;
 }
 
 .bigcontainer p {
-    border: 2px solid rgb(173, 28, 146);
     color: rgb(7, 7, 7);
     background-color: rgba(16, 16, 16, 0);
     width: 23%;
@@ -111,45 +121,49 @@ img:hover {
 
 .subcontainer {
     display: flex-column;
-    border: 2px solid rgb(122, 10, 221);
+    border: 13px double white;
     margin: var(--mgn1);
     padding: 2%;
     border-radius: var(--br30);
 
 }
 
+/* Gives display properties that house the 4 small project titles and images */
 .subcontainersmall {
     display: flex;
-    border: 2px solid rgb(122, 10, 221);
+    border: 13px double white;
     margin: var(--mgn1);
     padding: 1%;
     border-radius: var(--br30);
     justify-content: space-evenly;
 }
 
+/* Adds slight styling the the 4 project sections to give a little more space */
 .card {
-    border: 2px solid rgb(26, 184, 37);
+    display: block;
     margin: var(--mgn1);
-
 }
 
+/* Styles the boarder that houses the big project image */
 .subcontainer h2 {
-    border: 1px solid rgba(201, 32, 32, 0.872);
+    border: 13px double white;
     text-align: center;
     padding: 1%;
-    background-color: rgba(255, 255, 255, 0.301);
+    background-color: rgba(212, 71, 20, 0.626);
     margin: 1%;
 
 }
 
+/* Styles the boarder and margins for the section houses the 4 small projects */
 .subcontainersmall h2 {
-    border: 1px solid rgba(242, 236, 236, 0.872);
+    border: 13px double white;
     text-align: center;
     padding: 1%;
     background-color: rgba(212, 71, 20, 0.626);
 
 }
 
+/* Styles the footer boarder*/
 footer {
     border: 13px double white;
     border-radius: var(--br30);
@@ -173,20 +187,22 @@ footer {
 }
 
 .footercontainer h3 {
-    font-size: 2.5em;
+    font-size: 1em;
     padding-left: 1%;
     text-align: center;
     border-bottom: 1px solid white;
 }
 
 .footercontainer li {
+    border: 4px double white;
     font-size: 1em;
     margin-left: var(--mgn1);
     padding: 1%;
     border-radius: var(--br30);
-
+    margin-top: 10px;
 }
 
+/* Changes certain values to be more responsive when screen size is reduced */
 @media screen and (max-width: 992px) {
     .navcontainer li {
         font-size: 20px;
@@ -200,7 +216,6 @@ footer {
     }
 
     .bigcontainer p {
-        border: 2px solid rgb(173, 28, 146);
         color: rgb(7, 7, 7);
         background-color: rgba(16, 16, 16, 0);
         width: 40%;
